# ml_opdracht_mattijs

./: hypertune.py  pyproject.toml
dev/notebooks/: explore_dataset.ipynb
src/: settings.py
src/data/: make_dataset.py
src/models/: train_model.py
