[tool.poetry]
name = "mlopdracht"
version = "0.1.0"
description = ""
authors = ["R.Grouls <rgrouls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
loguru = "^0.7.0"
tqdm = "^4.65.0"
numpy = "^1.24.3"
requests = "^2.30.0"
pydantic = "^1.10.7"
jupyter = "^1.0.0"
torch-tb-profiler = "^0.4.0"

[tool.poetry.group.tuning.dependencies]
gin-config = "^0.5.0"
ray = {extras = ["tune"], version = "^2.1.0"}
protobuf = "^3.20" # needed for ray
bayesian-optimization = "^1.4.2"
hpbandster = "^0.7.4"
configspace = "^0.6.0"
mlflow = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
flake8-annotations = "^3.0.1"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
